--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@ font-family: 'Rubik', sans-serif !important;
             </div>
                        
 <div class="logos">
-    <a href=""> 
+    <a href="https://owais-oxl.github.io/Cubers-result-3x3x3/"> 
     <img src="logo/cube-rubik-icon.png" alt="" class="logo">
         </a>
-        <a href="">
+        <a href="https://owais-oxl.github.io/Cubers-result-2x2x2/">
     <img src="logo/pocket-rubik-cube-icon.png" alt="" class="logo ">
             </a>
-            <a href="">
+            <a href="https://owais-oxl.github.io/Cubers-result-pyraminx/">
     <img src="logo/pyraminx-meffert-icon.png" alt="" class="logo hello">
 
                 </a>
-                <a href="">
+                <a href="https://owais-oxl.github.io/Cubers-result-4x4x4/">
     <img src="logo/rubik-revenge-icon.png" alt="" class="logo">
                     
                     </a>
